# project-template

./: .gitignore  CMakeLists.txt  README.md  README.org  install.sh
doc/: README.md
include/template_project/: header.hpp
src/: main.cpp
